--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "co": "^4.6.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-es6-template-engine": "^2.2.3",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "sanitizer": "^0.1.3"
   }
 }
