--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-es6-template-engine": "^2.2.3",
+    "nodemon": "^2.0.22",
     "openai": "^3.2.1",
     "router": "^1.3.8",
     "sanitizer": "^0.1.3"
