--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-es6-template-engine": "^2.2.3",
+    "mysql2": "^3.3.1",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
+    "pg": "^8.10.0",
     "router": "^1.3.8",
     "sanitizer": "^0.1.3"
   }
