--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-es6-template-engine": "^2.2.3",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.1",
     "nodemon": "^2.0.22",
     "openai": "^3.2.1",
